# web

./: Cargo.toml
assets/css/: head.css
db/: db.sqlite
src/: accounts.rs  main.rs  users.rs
src/forum/: boards.rs  mod.rs
templates/: head.tera  index.tera
templates/accounts/: index.tera  login.tera  register.tera
