[package]
name = "cityarts-web"
version = "0.1.0"
authors = ["quickn"]

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket.git" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket.git" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
diesel = { version = "1.3", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.3"
log = "0.4"
sha3 = "0.7"
rand = "0.5"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket.git"
default-features = false
features = ["tera_templates", "diesel_sqlite_pool"]